fix: add custom style to poster carousel scrollbar

--- a/suborbit/static/src/input.css
+++ b/suborbit/static/src/input.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+#poster-carousel::-webkit-scrollbar {
+  height: 6px;
+}
+#poster-carousel::-webkit-scrollbar-thumb {
+  background: rgba(255,255,255,0.1);
+  border-radius: 4px;
+}
+#poster-carousel::-webkit-scrollbar-track {
+  background: transparent;
+}
+#poster-carousel {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255,255,255,0.1) transparent;
+}
